Add lesson page with collapsible sections and link to JavaScript

--- a/index.html
+++ b/index.html
@@ -4,26 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hindi Learning</title>
+    <!-- font awesome and google fonts -->
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
-
+<a href="index.html">
+            <h1 id="logo">Love Running</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="">Sign up</a>
+                    </li>
+                </ul>
+            </nav>
+        </a>
     </header>
     <main>
     <div class="container">
-<button type="button" class="collapsible">Question & Answers</button>
-<div class="collapsible-content">
 
-</div>
-<button type="button" class="collapsible">Fill In The Blanks</button>
-<div class="collapsible-content">
-
-</div>
-<button type="button" class="collapsible">Meanings</button>
-<div class="collapsible-content">
-
-</div>
     </div>
     </main>
     <footer>
