--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="index.html" >Home</a></li>
             </ul>
         </nav>
     </header>
     <main>
-    <div class="container">
+    <div class="lessons-grid">
 
     </div>
     </main><!-- Footer -->
