Add lesson data fetching and dynamic content rendering
- Implemented JSON fetching from lessons.json to populate lesson content dynamically.
- Added collapsible sections for questions, fill-in-the-blanks, and meanings.
- Created event listeners for collapsible elements to toggle visibility.
- Enhanced lesson title display with lesson number and title.
- Integrated "Listen" button for each question and answer.
- Improved error handling for JSON fetching.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main>
-    <div class="lessons-grid">
+    <div class="lessons-grid" id="lessongrid">
 
     </div>
     </main><!-- Footer -->
