--- a/lesson.html
+++ b/lesson.html
@@ -1,34 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hindi Learning</title>
+    <!-- font awesome and google fonts -->
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
-
+        <a href="index.html">
+            <a href="index.html">
+                <h1 id="logo">My Hindi Learning</h1>
+            </a>
+            <input type="checkbox" id="nav-toggle" name="nav-toggle">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <nav>
+                <ul id="menu">
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </nav>
     </header>
     <main>
-    <div class="container">
-<button type="button" class="collapsible">Question & Answers</button>
-<div class="collapsible-content">
+        <h2 id="lesson-title">Lesson</h2>
+        <div class="container">
+            <button type="button" class="collapsible">Question & Answers</button>
+            <div class="collapsible-content" id="question-answers">
+                <p></p>
+            </div>
+            <button type="button" class="collapsible">Fill In The Blanks</button>
+            <div class="collapsible-content" id="fill-blanks">
+                <p></p>
 
-</div>
-<button type="button" class="collapsible">Fill In The Blanks</button>
-<div class="collapsible-content">
+            </div>
+            <button type="button" class="collapsible">Meanings</button>
+            <div class="collapsible-content" id="meanings">
+                <p></p>
 
-</div>
-<button type="button" class="collapsible">Meanings</button>
-<div class="collapsible-content">
+            </div>
 
-</div>
-    </div>
-    </main>
+        </div>
+    </main><!-- Footer -->
     <footer>
-
+        <ul id="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
-    <script src="assets/js/script.js"></script>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+    <script src="assets/js/lessonscript.js"></script>
 </body>
+
 </html>
