--- a/lesson.html
+++ b/lesson.html
@@ -76,6 +76,7 @@
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+    <script src="https://www.google.com/jsapi"></script>
     <script src="assets/js/lessonscript.js"></script>
 </body>
 
