Add speech controls and update speech synthesis functionality

--- a/lesson.html
+++ b/lesson.html
@@ -26,11 +26,15 @@
             <nav>
                 <ul id="menu">
                     <li><a href="index.html">Home</a></li>
+                    <li><button type="button" id="speech-play" class="speech-controls"> Play </button></li>
+                    <li><button type="button" id="speech-pause" class="speech-controls"> Pause </button></li>
+                    <li><button type="button" id="speech-stop" class="speech-controls"> Stop </button></li>
                 </ul>
             </nav>
     </header>
     <main>
         <h2 id="lesson-title">Lesson</h2>
+
         <div class="container">
             <button type="button" class="collapsible">Question & Answers</button>
             <div class="collapsible-content" id="question-answers">
