Refactor logo link structure and update styles for improved layout and accessibility

--- a/lesson.html
+++ b/lesson.html
@@ -15,10 +15,9 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <a href="index.html">
-                <h1 id="logo">My Hindi Learning</h1>
-            </a>
+        <a href="index.html" class="logo-heading">
+            <h1 id="logo">My Hindi Learning</h1>
+        </a>
             <input type="checkbox" id="nav-toggle" name="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
                 <i class="fa-solid fa-bars"></i>
