--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +12,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
-<a href="index.html">
-<a href="index.html">
+        <a href="index.html" class="logo-heading">
             <h1 id="logo">My Hindi Learning</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -23,14 +24,14 @@
         </label>
         <nav>
             <ul id="menu">
-                    <li><a href="index.html">Home</a></li>
-                </ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
         </nav>
     </header>
     <main>
-    <div class="lessons-grid" id="lessongrid">
+        <div class="lessons-grid" id="lessongrid">
 
-    </div>
+        </div>
     </main><!-- Footer -->
     <footer>
         <ul id="social-networks">
@@ -61,4 +62,5 @@
     <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
