--- a/lesson.html
+++ b/lesson.html
@@ -7,10 +7,10 @@
     <title>My Hindi Learning</title>
     <!-- font awesome and google fonts -->
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -80,7 +80,7 @@
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
     <script src="https://www.google.com/jsapi"></script>
-    <script src="assets/js/lessonscript.js"></script>
+    <script src="../assets/js/lessonscript.js"></script>
 </body>
 
 </html>
