modify main logic with topics

--- a/lesson.html
+++ b/lesson.html
@@ -34,8 +34,8 @@
     <main>
         <h2 id="lesson-title">Lesson</h2>
 
-        <div class="container">
-            <button type="button" class="collapsible">Question & Answers</button>
+        <div class="container" id="lesson-container">
+            <!-- <button type="button" class="collapsible">Question & Answers</button>
             <div class="collapsible-content" id="question-answers">
                 <p></p>
             </div>
@@ -48,7 +48,7 @@
             <div class="collapsible-content" id="meanings">
                 <p></p>
 
-            </div>
+            </div> -->
 
         </div>
     </main><!-- Footer -->
