--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,7 @@
     <div class="sidebar-header">
       <h2>Lessons Tree</h2>
       <button class="btn small success" onclick="addLesson()">+ Lesson</button>
+      <button class="btn small success" onclick="addComposition()">+ Composition</button>
     </div>
     <div id="tree"></div>
   </aside>
