Add Letter writing

--- a/admin.html
+++ b/admin.html
@@ -17,8 +17,11 @@
   <aside class="sidebar">
     <div class="sidebar-header">
       <h2>Lessons Tree</h2>
+    </div>
+    <div>      
       <button class="btn small success" onclick="addLesson()">+ Lesson</button>
-      <button class="btn small success" onclick="addComposition()">+ Composition</button>
+      <button class="btn small success" onclick="addLesson()">+ Composition</button>
+      <button class="btn small success" onclick="addLesson()">+ Letter</button>
     </div>
     <div id="tree"></div>
   </aside>
