--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
+                <!-- <li class="dropdown">
+                    <input type="checkbox" name="dropdown-toggle" id="dropdown-toggle">
+                    <label for="dropdown-toggle" class="dropdown-toggle-label">Voices</label>
+                    <div class="dropdown-content" id="voice-selection">
+                        
+                    </div>
+
+                </li> -->
             </ul>
         </nav>
     </header>
