--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="checkbox" name="dropdown-toggle" id="dropdown-toggle">
                     <label for="dropdown-toggle" class="dropdown-toggle-label">Voices</label>
                     <div class="dropdown-content" id="voice-list">
-                        
+                        <p>Loading voices... (Ensure browser supports Web Speech API)</p>
                     </div>
 
                 </li>
